# kuni

./: CMakeLists.txt  README.md  aui.boot.cmake  docker-compose.yml  sd_proxy.py
grafana/dashboards/: main.json
src/: AppBase.cpp  AppBase.h  Diary.cpp  Diary.h  IChatHistoryMessageProcessor.h  IOpenAIChat.cpp  IOpenAIChat.h  ImageGenerator.cpp  MetricsBreadcumbs.cpp  OpenAIChatImpl.cpp  OpenAIChatImpl.h  OpenAIChatMeasurable.cpp  OpenAIChatMeasurable.h  OpenAITools.cpp  OpenAITools.h  Prometheus.cpp  Prometheus.h  WebSearch.cpp  WebSearch.h  config.cpp  config.h  main.cpp  prompts.cpp  prompts.h
src/llmui/: telegram.cpp  telegram.h  telegram_video_messages.cpp  telegram_voice_messages.cpp
src/proxy_server/: context_bridge.cpp  context_bridge.h  json_fingerprint.h  message_injector.cpp  message_injector.h  proxy_server.cpp  proxy_server.h  streaming_filter.cpp  streaming_filter.h
src/speech/: ElevenLabsClient.cpp  ElevenLabsClient.h  OpenAISpeechClient.cpp  OpenAISpeechClient.h  VoiceGenerator.cpp  VoiceGenerator.h
src/telegram/: ITelegramClient.cpp  ITelegramClient.h  TelegramClientImpl.cpp
src/tools/: ask.cpp  ask.h  edit_message_text.cpp  edit_message_text.h  get_chat_photo.cpp  get_chat_photo.h  get_telegram_chats.cpp  react_with_emoji.cpp  record_audio.cpp  record_trait_signal.cpp  record_trait_signal.h  remove_and_ban_chat.cpp  remove_message.cpp  remove_message.h  search_chats.cpp  send_telegram_message.cpp  send_telegram_message.h
src/ui/debug/: DiaryQueryAI.cpp
src/util/: await_synchronously.h  diary_save_entries.h  format_past_hours.cpp  format_past_hours.h  important_things_to_remember.h  json_utils.h  openai_streaming.cpp  openai_streaming.h  post_message.cpp  post_message.h  time_ago.cpp  time_ago.h  tui_streaming.h  typos.cpp  typos.h
tests/: AppBaseUnitTest.cpp  ContextBridgeUnitTest.cpp  DairyIntegrationTest.cpp  ImageGeneratorIntegrationTest.cpp  JsonUtilsUnitTest.cpp  MessageInjectorTest.cpp  OpenAIChatIntegrationTest.cpp  OpenAIChatTest.cpp  OpenAIStreamingUnitTest.cpp  PersonalityConsolidationUnitTest.cpp  PrometheusUnitTest.cpp  ProxyServerTest.cpp  StableDiffusionClientIntegrationTest.cpp  StreamingFilterUnitTest.cpp  TelegramIntegrationTests.cpp  TimeAgoUnitTest.cpp  TyposUnitTest.cpp  WebSearchIntegrationTest.cpp  common.h
tests/llmui/: audio_test.cpp  image_test.cpp
tests/tools/: ask_test.cpp  get_chat_photo_test.cpp  react_with_emoji_test.cpp  remove_and_ban_chat_test.cpp  search_chats_test.cpp  send_telegram_message_test.cpp  take_photo_test.cpp
